@@ -11,11 +11,12 @@ SRC_URI=""
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86 ~amd64"
+KEYWORDS="x86 amd64"
 IUSE="printer wireless"
 
 RDEPEND="
-	!media-libs/svgalib
+	>=sys-auth/pambase-20101024
+	>=sys-apps/shadow-4.1.4.2-r6
 "
 
 RDEPEND="${RDEPEND}
