@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Nov 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -cls-meta-10.9.ebuild, cls-meta-10.9-r1.ebuild:
+  Fix depends for shadow and pambase.
+
 *cls-meta-10.9-r1 (08 Nov 2010)
 
   08 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
